syntax = "proto3";
package x.bridgefee;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "types/coin.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/pokt-network/pocket-core/x/bridgefee/types";

enum TargetType {
  NotSet = 0;
  Burn = 1;
  Address = 2;
  RewardPool = 3;
}

message TokenInfo {
    string token = 1;
    uint64 bufferSize = 2;
    uint32 tokenSpecificConfig = 3; // 1 or 0
}

message TargetConfig {
    string token = 1;
    uint32 len = 2; // Max 27 weights
    uint32 totalW = 3;
    uint64 weights = 4;
}

message TargetInfo {
  string token = 1;
  string target = 2;
  TargetType tType = 3;
}

// The state of the module from the beginning
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated string allowedActors = 2;
  repeated TokenInfo tokenInfos = 3 [ (gogoproto.nullable) = false ];
  repeated TargetConfig tokenTargetConfigs = 4 [ (gogoproto.nullable) = false ];
  repeated TargetInfo tokenTargetInfos = 5 [ (gogoproto.nullable) = false ];
  TargetConfig globalTargetConfig = 6 [ (gogoproto.nullable) = false ];
  repeated TargetInfo targetInfos = 7 [ (gogoproto.nullable) = false ];
}

message Params {
  string owner = 1;
}

message MsgAddAllowedActor {
  option (gogoproto.messagename) = true;
  option (gogoproto.goproto_getters) = false;

  bytes fromAddress = 1 [
    (gogoproto.jsontag) = "fromAddress",
    (gogoproto.casttype) = "github.com/pokt-network/pocket-core/types.Address"
  ];
  string actor = 2;
}

message MsgRemoveAllowedActor {
  option (gogoproto.messagename) = true;
  option (gogoproto.goproto_getters) = false;

  bytes fromAddress = 1 [
    (gogoproto.jsontag) = "fromAddress",
    (gogoproto.casttype) = "github.com/pokt-network/pocket-core/types.Address"
  ];
  string actor = 2;
}

message MsgSetTokenInfo {
  option (gogoproto.messagename) = true;
  option (gogoproto.goproto_getters) = false;

  bytes fromAddress = 1 [
    (gogoproto.jsontag) = "fromAddress",
    (gogoproto.casttype) = "github.com/pokt-network/pocket-core/types.Address"
  ];
  TokenInfo info = 2 [ (gogoproto.nullable) = false ];
}

message MsgSetTokenTargetInfos {
  bytes fromAddress = 1 [
    (gogoproto.jsontag) = "fromAddress",
    (gogoproto.casttype) = "github.com/pokt-network/pocket-core/types.Address"
  ];
  string token = 2;
  repeated TargetInfo info = 3 [ (gogoproto.nullable) = false ];
  repeated uint64 weights = 4;
}

message MsgSetGlobalTargetInfos {
  bytes fromAddress = 1 [
    (gogoproto.jsontag) = "fromAddress",
    (gogoproto.casttype) = "github.com/pokt-network/pocket-core/types.Address"
  ];
  repeated TargetInfo info = 3 [ (gogoproto.nullable) = false ];
  repeated uint64 weights = 4;
}
